# NSU

./: .gitignore  README.md
BPP/: README.md
BPP/T1/: CMakeLists.txt  main.cpp  pr1.res  pr2.res  sngl.res
BPP/T1/parallel1/: main.cpp
BPP/T1/parallel2/: main copy.cpp  main.cpp
BPP/T1/single/: main copy.cpp  main.cpp
BPP/T1MPI/parallel2/: main.cpp
BPP/T1MPI/single/: main.cpp
BPP/T2OMP/: start.sh.o4485945  start.sh.o4485951
BPP/T2OMP/parallel1/: main.cpp
BPP/T2OMP/parallel2/: main.cpp
BPP/T2OMP/single/: main.cpp
BPP/T3MPITopolog/: main.cpp  solo.cpp
BPP/T4GameOfLife/: game_of_life.c  game_of_life_single.c  mul.sh.e4665566  mul.sh.o4665566
BPP/T5POSIXThreads/: main.c
CM/: README.md
CM/T1CubEqSolver/: Main.java  sol.py
CM/T2/: main.c
CM/T3CalcIntegral/: Timur_xxx.cpp  main.c
CM/T4GodunovSchema/: sol.py
CM/T5Progonka/: solution.py
C_sharp/task1/Strategies/: Random.cs
C_sharp/task1/testapp/: Program.cs  testapp.csproj
C_sharp/task2/: testapp.sln
C_sharp/task2/CollisiumSandbox/: CollisiumSandbox.cs
C_sharp/task2/GameStuff/: Cards.cs  DeckStuff.cs  IStrategy.cs
C_sharp/task2/Strategies/: Str2.cs  StrategiesFactory.cs
C_sharp/task2/testapp/: CollisiumExperimentWorker.cs  Program.cs  testapp.csproj
C_sharp/task3/: testapp.sln
C_sharp/task3/CollisiumSandbox/: CollisiumSandbox.cs
C_sharp/task3/DeckShuffler/: DeckShuffler.csproj
C_sharp/task3/GameStuff/: DeckStuff.cs
C_sharp/task3/Strategies/: Random.cs  Strategies.csproj  StrategiesFactory.cs
C_sharp/task3/UnitTests/: DeckTests.cs  ExperimentTests.cs  StrategyTests.cs  UnitTests.csproj
C_sharp/task3/testapp/: CollisiumExperimentWorker.cs  Program.cs  testapp.csproj
C_sharp/task4/: testapp.sln
C_sharp/task4/DbStuff/: ExperimentUtils.cs  test.db-shm  test.db-wal
C_sharp/task4/DeckShuffler/: DeckShuffler.cs
C_sharp/task4/UnitTests/: DbTests.cs  UnitTests.csproj
C_sharp/task4/testapp/: Program.cs  appsettings.json  testapp.csproj
C_sharp/task5/: testapp.sln
C_sharp/task5/CollisiumSandbox/: CollisiumSandbox.cs  ICollisiumSandbox.cs
C_sharp/task6/: testapp.sln
DB/: README.md  Отчет БД.docx
DB/testflutter/: pubspec.yaml
ECD/: README.md
ECD and peripherals/T1/: main.cpp
ECD/T1/: CMakeLists.txt  l0  l1  l2  l3  lfast  lg  ls  lstand  main.cpp  out.csv  outtime.csv  outval.csv
ECD/T2/: main.cpp  main.s  mainO3.s  main_godbolt - Copy.s  main_godbolt.s  outtime.csv  outval.csv
ECD/T3/: prog0.s  prog0opt.s  prog0optclean.s
ECD/T4/: CMakeLists.txt  main.cpp
ECD/T4.1/: CMakeLists.txt  go  main.cpp
ECD/T5/: CMakeLists.txt  main.c
ECD/T5Linux/: main.cpp  sdf.txt
ECD/T6/: CMakeLists.txt  main.cpp  out_backward.csv  out_direct.csv  out_random.csv
ECD/T7/: CMakeLists.txt  main.cpp  offset 16384.csv  offset 8192.csv  out_cache.csv  out_cache.xlsx  out_cache1.csv  out_cache2.csv
ECD/T8/: main.cpp
ECD/Т8/: CMakeLists.txt  c_form_O1.s  c_form_O3.s  main.cpp  main_gcc_11_2_arm32.s
MTC/: README.md
MTC/part1/: .compile-errors  task1.flow  task2.flow  task3.flow  task4.flow
MTC/part2/: README.md  main.flow  mygrammar.flow  mygrammar.lingo  rpn.flow  rpn.lingo
MTC/part3/: extendedPegActions.flow  main.flow  nemo.flow  nemo.lingo  nemoparser.flow  nemoruntimevm.flow  nemovm.flow  nemovm.lingo  nemovmparser.flow  testnemo.nemo  translator.flow
NSU FIT/: MLE perfocards.c  bag task.c  heap sort.c  heap.c
NSU FIT/calculator with UI/: CMakeLists.txt  input.txt
NSU FIT/cycle queue/: debug.c
OLD/: AVL tree.c  Dijkstra alg.c  Sentinel Descendants in Time.c  calc from postfix.c  calculator.c  infix to postfix.c  perfocards.c  qsort.c  queue and wide search.c
OLD/Random mas generation/: Source.c
OLD/calculator with UI/: main.c
OLD/cycle queue/: main.c
OLD/Архиватор Хаффманом/: main.c  Архиватор Хаффманом.rar
OOP/: README.md  Untitled Diagram.drawio
OOP/C++/T0/0a/: CMakeLists.txt
OOP/C++/T0/0a/include/: module1.h  module3.h
OOP/C++/T0/0a/src/: module1.cpp  module3.cpp
OOP/C++/T2/: CMakeLists.txt  main.cpp
OOP/C++/T2/include/: config_handler.h  exceptions.h  factories.h  workers.h  workflow_executor.h
OOP/C++/T2/src/: exceptions.cpp
OOP/Java/: Untitled.mdj
OOP/T1/: CMakeLists.txt  main.cpp  test_tritset.cpp  tritset.cpp  tritset.h
OOP/T2/: CMakeLists.txt  config_handler.cpp  config_handler.h  config_handler_test.cpp  exceptions.cpp  exceptions.h  factory.h  main.cpp  test.txt  workers.h
OOP/T2/src/: config_handler.cpp  factories.cpp  workers.cpp  workflow_executor.cpp
OOP/T3/: CMakeLists.txt  game_field.cpp  game_field.h  game_master.h  game_session.cpp  game_session.h  main.cpp  option_handler.cpp  option_handler.h  player.h  script.h  ship.h
OOP/T3/include/: coordinates.h  dynamic_input.h  game_field.h  game_master.h  game_session.h  option_handler.h  player.h  ship.h
OOP/T3/src/: coordinates.cpp  dynamic_input.cpp  game_field.cpp  game_master.cpp  game_session.cpp  option_handler.cpp  player.cpp  ship.cpp
OOP/T4/: CMakeLists.txt  CSVParser.h  exceptions.h  main.cpp
OS/: CMakeLists.txt  README.md  main.cpp
OS/T10ReturnComCode/: main.c
OS/T16Termios/: main.c
OS/T17Texteditor/: main.c
OS/T1Getopt/: main.c
OS/T2TimeCalifornia/: CMakeLists.txt  README.md
OS/T30UnixSocket/: c  client.c  s  server.c
OS/T31MultUnixSocket/: s  server.c
OS/T4/: CMakeLists.txt  main.c
OS/T5Linetable/: main.c
OS/T6LinetableWithAlarm/: main.c
OS/T9TwoProcesses/: main.c
Sasha/trits/: CMakeLists.txt  main.cpp  tritset.cpp  tritset.h  tritset_test.cpp
Sasha/workflow/: CMakeLists.txt  Config_handler.cpp  Config_handler.h  Worker.h  Workflow.h  exceptions.cpp  exceptions.h  main.cpp
T1/: CMakeLists.txt  main.cpp
T1/0a/: main.cpp
crypto/lab1_caesar/: lab1_caesar.py
crypto/lab2_entropy/: diff2  lab2_entropy.py
distributed_info_systems/task1/: compose.yaml
distributed_info_systems/task2/: .env  README.md  compose.yaml  manager.yaml  stuff.yaml
master/data_an_and_ml/: lab1.py  ЛАБ5_ИАД.ipynb
master/signals/: lab1.py  lab1_3.py  lab1_no_al.py
(+500 files in other folders)
